# python-pankoclient

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: api.rst  conf.py  index.rst  installation.rst  osc_integrated_commands.rst  shell.rst
pankoclient/: __init__.py  client.py  exceptions.py  osc.py  shell.py  utils.py
pankoclient/common/: base.py  exceptions.py  http.py  i18n.py  utils.py
pankoclient/osc/v2/: capabilities.py  events.py
pankoclient/tests/unit/: base.py  fakes.py  test_osc_plugin.py
pankoclient/tests/unit/common/: test_base.py  test_exceptions.py  test_http.py  test_utils.py
pankoclient/tests/unit/osc/: test_plugin.py
pankoclient/tests/unit/osc/v2/: test_events.py
pankoclient/tests/unit/v2/: test_events.py
pankoclient/v2/: capabilities.py  capabilities_cli.py  client.py  events.py  events_cli.py
releasenotes/notes/: drop-py-2-7-08bf464fcf679d24.yaml
releasenotes/source/: conf.py  index.rst
