[metadata]
name = pankoclient
summary = Python client library for OpenStack Panko project.
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-pankoclient/latest/
python-requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    pankoclient

[extras]
test =
    coverage>=4.0 # Apache-2.0
    hacking>=0.12.0,!=0.13.0,<0.14  # Apache-2.0
    mock>=2.0 # BSD
    python-openstackclient>=3.3.0 # Apache-2.0
    oslotest>=1.10.0 # Apache-2.0
    reno>=1.8.0 # Apache-2.0
    requests-mock>=1.1 # Apache-2.0
    testrepository>=0.0.18 # Apache-2.0/BSD
    testscenarios>=0.4 # Apache-2.0/BSD

[entry_points]
console_scripts =
    panko = pankoclient.shell:main

openstack.cli.extension =
    event = pankoclient.osc

openstack.event.v2 =
    event capabilities list = pankoclient.v2.capabilities_cli:CliCapabilitiesList
    event list = pankoclient.v2.events_cli:EventList
    event show = pankoclient.v2.events_cli:EventShow
    event type list = pankoclient.v2.events_cli:EventTypeList
    event trait list = pankoclient.v2.events_cli:EventTraitList
    event trait description = pankoclient.v2.events_cli:EventTraitDescription

[compile_catalog]
directory = pankoclient/locale
domain = pankoclient

[update_catalog]
domain = pankoclient
output_dir = pankoclient/locale
input_file = pankoclient/locale/pankoclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = pankoclient/locale/pankoclient.pot
